--- a/gourmet-os/src/index.css
+++ b/gourmet-os/src/index.css
@@ -2,6 +2,9 @@
 @tailwind components;
 @tailwind utilities;
 
-body {
-  background-color: red !important;
+html, body {
+  background-color: #f8fafc;
+  margin: 0;
+  padding: 0;
+  height: 100%; 
 }
